2009-10-10  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/command.c (MogrifyImages): If there is only one image in
	the list, then -flatten does nothing at all.

	* magick/transform.c (FlattenImages): If the user provides only
	one image then return a clone of that image rather than reporting
	an error.

	* magick/texture.c (TextureImage): If an under-texture is applied,
	then remove the matte channel.

	* magick/xwindow.c (MagickXMakeImage): Apply a checkerboard
	pattern when displaying non-opaque TrueColor images.  Fix a second
	integer overflow issue related to CVE-2009-1882.

2009-10-10  Toby Thain  <qu1j0t3@users.sourceforge.net>

	* coders/psd.c: Fix for 2783535 reported by Daniel Kirsch. PSD
	parser was confused by 0x0 pixel layers, resulting in image data
	corruption of all following layers.

2009-10-09  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/xwindow.c (MagickXMakeImage): Fix for CVE-2009-1882
	"Integer overflow in the XMakeImage function".  The problem is
	that the shared memory segment allocated may be smaller than the
	image size requires due to integer overflow.  On some systems it
	may be possible to crash GraphicsMagick (while displaying an image
	file) but not likely to overwrite the heap since shared memory
	segments are outside of the heap allocation.

	* magick/memory.c (MagickMallocArray): Use MagickArraySize().

	* magick/memory.c (MagickArraySize): New private function to
	compute the size of an array and return zero if it overflows the
	size_t type.

2009-10-08  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/dcm.c (ReadDCMImage): Handle (UN)known type VRs correctly
	and interpret the transfer syntax correctly.  Added define
	"dcm:avoid-scaling" to request that the coder should not scale
	image samples unless necessary (i.e. when bits used > quantum
	depth or maximum colormap depth, depending on image type).  Work
	is contributed by John Sergeant.
