@@ -24,6 +24,8 @@
 2009-10-10  Bob Friesenhahn  &lt;bfriesen@simple.dallas.tx.us&gt;
 
 <UL>
+  <LI> magick/xwindow.c: Check for overflow on all array allocations.
+
   <LI> magick/command.c (MogrifyImages): If there is only one image in
         the list, then -flatten does nothing at all.
 
